apps/cms/infra/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cms-payload-ingressroute
  namespace: cms-payload
  labels:
    app: cms-payload
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cms.danipras.dev`)
      kind: Rule
      services:
        - name: cms-payload-service
          port: 80
  tls:
    certResolver: letsencrypt
